KV file updates

--- a/rsi-kv.ipynb
+++ b/rsi-kv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,24 @@
     "from mplfinance.original_flavor import candlestick_ohlc\n",
     "from pandas.core.common import flatten\n",
     "from tabulate import tabulate\n",
-    "\n"
+    "\n",
+    "# Necessary Libraries\n",
+    "import yfinance as yf, pandas as pd, shutil, os, time, glob\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "from get_all_tickers import get_tickers as gt\n",
+    "from statistics import mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matplotlib.rcParams.update({'font.size': 9})\n",
+    "\n",
+    "list_files = (glob.glob(\"SMA_Analysis/Stocks/*.csv\"))"
    ]
   },
   {
@@ -30,13 +47,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matplotlib.rcParams.update({'font.size': 9})\n",
-    "\n",
-    "stocks = []\n",
-    "\n",
     "# If stocks array is empty, pull stock list from stocks.txt file\n",
-    "stocks = stocks if len(stocks) > 0 else [\n",
-    "    line.rstrip() for line in open(\"stocks.txt\", \"r\")]\n",
+    "#stocks = stocks if len(stocks) > 0 else [\n",
+    "   # line.rstrip() for line in open(\"stocks.txt\", \"r\")]\n",
     "\n",
     "# Time frame you want to pull data from\n",
     "start = datetime.datetime.now()-datetime.timedelta(days=365)\n",
