adding plot images

--- a/MACD-kv.ipynb
+++ b/MACD-kv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,27 +16,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The amount of stocks chosen to observe: 12\n"
+      "The amount of stocks chosen to observe: 60\n"
      ]
     }
    ],
    "source": [
     "# If you have a list of your own you would like to use just create a new list instead of using this, for example: tickers = [\"FB\", \"AMZN\", ...] \n",
-    "tickers = gt.get_tickers_filtered(mktcap_min=350000, mktcap_max=2000000)\n",
+    "tickers = gt.get_tickers_filtered(mktcap_min=150000, mktcap_max=4000000)\n",
     "# Check that the amount of tickers isn't more than 2000\n",
     "print(\"The amount of stocks chosen to observe: \" + str(len(tickers)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,15 @@
       "Iteration = 9\n",
       "Iteration = 10\n",
       "Iteration = 11\n",
-      "The amount of stocks we successfully imported: 12\n"
+      "Iteration = 12\n",
+      "Iteration = 13\n",
+      "Iteration = 14\n",
+      "Iteration = 15\n",
+      "Iteration = 16\n",
+      "Iteration = 17\n",
+      "Iteration = 18\n",
+      "Iteration = 19\n",
+      "The amount of stocks we successfully imported: 20\n"
      ]
     }
    ],
@@ -85,7 +93,7 @@
     "\n",
     "# Used to iterate through our list of tickers\n",
     "i=0\n",
-    "while (i < len(tickers)) and (Amount_of_API_Calls < 12):\n",
+    "while (i < len(tickers)) and (Amount_of_API_Calls < 20):\n",
     "    try:\n",
     "        print(\"Iteration = \" + str(i))\n",
     "        stock = tickers[i]  # Gets the current stock ticker\n",
